Correct layout of movie view, add filtering

--- a/cinema_tickets/templates/movie.html
+++ b/cinema_tickets/templates/movie.html
@@ -1,5 +1,5 @@
-{% extends 'layout.html' %}
-{% block body %}
+{% extends 'layout.html' %} {% block body %}
+{% set cinema_path = path + '?date=' + date.strftime('%Y-%m-%d') %}
 <div class="tile is-ancestor">
   <div class="tile is-4 is-vertical is-parent">
     <div class="tile is-child">
@@ -11,7 +11,7 @@
   <div class="tile is-parent">
     <div class="tile is-child box">
       <p class="title">{{ movie.name }}</p>
-      <p>{{ movie.description }}</p>
+      <p>{{ movie.description }} {{date_path}}</p>
     </div>
   </div>
 </div>
@@ -19,50 +19,47 @@
   <p class="panel-heading">
     dostępne seanse
   </p>
+  <form action="{{path}}" method="get">
   <div class="panel-block">
     <div class="field has-addons select-date">
       <p class="control is-expanded">
-        <input class="input is-small" type="date">
+        <input name="date" class="input is-small" type="date" value="{{ date.strftime('%Y-%m-%d') }}">
       </p>
       <p class="control">
-        <a class="button is-info is-small">
+        {% if cinema is not none %}
+        <input name="cinema" type="hidden" value="{{cinema}}">
+        {% endif %}
+        <button type="submit" class="button is-info is-small">
           Filter day
-        </a>
+        </button>
       </p>
     </div>
   </div>
+  </form>
   <p class="panel-tabs">
-    <a class="is-active">wszystkie</a>
-    <a>kino #1</a>
-    <a>kino #2</a>
-    <a>kino #3</a>
+    <a{% if cinema is none %} class="is-active"{% endif %} href="{{cinema_path}}">wszystkie</a>
+    {% for cin in cinemas %}
+    <a{% if cin.id == cinema %} class="is-active"{% endif %} href="{{cinema_path}}&amp;cinema={{ cin.id }}">{{ cin.name }}</a>
+    {% endfor %}
   </p>
   {% for session, tickets_count in sessions %}
-  <div class="panel-block columns is-multiline">
-    <div class="column is-narrow panel-icon">
+  <div class="panel-block">
+    <span class="panel-icon">
       <i class="fas fa-film"></i>
-    </div>
-    <time class="column is-narrow" datetime="">
-      <strong>{{ session.time.time().strftime('%H:%M') }}</strong>
-    </time>
-    <div class="column is-narrow tags has-addons">
-      <div class="tag">{{ session.hall_name }}</div>
-      <div class="tag is-primary">Nazwa sali</div>
-    </div>
-
-    <div class="column is-narrow">
-      {{ tickets_count }}/{{ session.hall_capacity }}
-    </div>
-    <div class="column is-narrow">
-      <a class="button is-info" href="{{ url_for('.show_buy_ticket', id=session.id) }}">
-        Buy
-      </a>
-    </div>
-    <div class="column is-narrow">
-      <a class="button is-info" href="{{ url_for('.show_tickets', id=session.id) }}">
-        Show
-      </a>
-    </div>
+    </span>
+    <strong>{{ session.time.time().strftime('%H:%M') }}</strong>
+    &nbsp;
+    <a class="button is-info is-small" href="{{ url_for('.show_tickets', id=session.id) }}">
+      Show
+    </a>
+    &nbsp;
+    <a class="button is-info is-small" {% if tickets_count >= session.hall_capacity %}disabled{% else %}href="{{ url_for('.show_buy_ticket', id=session.id) }}"{% endif %}>
+      Buy
+    </a>
+    &nbsp;
+    <a class="button is-primary is-small">Nazwa sali:&nbsp;<strong>{{ session.hall_name }}</strong></a>
+    &nbsp;
+    <a class="button is-warning is-small">Dostępność:&nbsp;<strong>{{ tickets_count }} / {{ session.hall_capacity }}</strong></a>
   </div>
   {% endfor %}
 </nav>
